test account parsing

--- a/test/bibliRennesScraper/compte_lecteur_items.html
+++ b/test/bibliRennesScraper/compte_lecteur_items.html
@@ -305,6 +305,7 @@
 </span></td>
 <td  class="patFuncBarcode"> 33500600747992 </td>
 <td  class="patFuncStatus"> RETOUR 13-07-21 
+    <span class="patFuncRenewCount">Renouvelé une fois</span>
 </td>
 <td  class="patFuncCallNo"> BD S  </td>
 </tr>
